--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Curso de Git e GitHub</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Título principal</title>
 </head>
 <body>
-    <h2>Minha página inicial</h2>    
+    <main>
+        <header>
+            <h1>Título do site</h1>
+        </header>
+        <article>
+            <h2>Artigo 001</h2>
+            <p>Texto artigo 001</p>
+        </article>
+        <article>
+            <h2>Artigo 002</h2>
+            <p>Texto artigo 002</p>
+        </article>
+    </main>
 </body>
 </html>
