--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de html 5 com css3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil dicta dolorem cumque totam sed magnam dignissimos velit. Vero, neque consectetur ratione harum esse recusandae quisquam ex omnis, totam accusamus voluptas.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur accusantium voluptatibus dolorum accusamus quo veniam aliquam delectus, itaque voluptas ullam molestiae natus, alias sunt aspernatur a blanditiis magnam dolor hic.</p>
         </article>
     </main>
 </body>
